--- a/PortfolioTrackerWebClient/package.json
+++ b/PortfolioTrackerWebClient/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tanstack/router-vite-plugin": "^1.132.51",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
