--- a/PortfolioTrackerWebClient/package.json
+++ b/PortfolioTrackerWebClient/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.1",
     "@auth0/auth0-react": "^2.6.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-router": "^1.132.47",
